# Namesmerizer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.c  namesmerizer  scriptExample.sh  test.c  test_runner
c/: test.c
src/: letter_case.c  letter_case.h  name_formatter.c  name_formatter.h
